home-automation/zwave2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave2mqtt
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    name: zwave2mqtt
