home-automation/zwave2mqtt/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zwave2mqtt-http-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: zwave2mqtt
          servicePort: http
    host: zwave2mqtt.k3s.ingenstans.se
  tls:
    - hosts:
      - zwave2mqtt.k3s.ingenstans.se
      secretName: zwave2mqtt-http-ingress-cert
